# bluestreak-box-uploader

./: .gitignore  BluestreakBoxUploader.spec  README.md  app.py  build.py  cli.py  installer.iss  pyproject.toml
box_service/: __init__.py  exceptions.py  folder_manager.py  uploader.py
database/: __init__.py  connection.py  history.py  models.py  queries.py  sqlite_seed.py
gui/: __init__.py  app.py  main_window.py  settings_dialog.py  theme.py  workers.py
gui/dialogs/: __init__.py  about_dialog.py  duplicate_dialog.py  warning_dialog.py
gui/widgets/: __init__.py  card.py  cert_table.py  history_viewer.py  log_viewer.py  upload_progress.py
settings/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_box_service.py  test_cli.py  test_database.py
tests/fixtures/: test.db
